# minesweeper

./: .gitignore  CMakeLists.txt  README.md
assets/macos/: Info.plist  Info.plist.in
docs/: tutorial.md
src/: CMakeLists.txt  config.h  main.cpp
src/app/: app.cpp  app.h
src/model/: board.cpp  board.h  data.cpp  data.h  screen.cpp  screen.h
src/utils/: config.h
src/view/: about.cpp  about.h  about.ui  button.cpp  button.h  game.cpp  game.h  game.ui  options.cpp  options.h  options.ui  window.cpp  window.h  window.ui
